--- a/package.json
+++ b/package.json
@@ -1,79 +1,55 @@
 {
-    "name": "gulpdemo",
-    "version": "1.0.0",
+    "name": "react-dome",
+    "version": "1.0.1",
     "description": "demo",
     "main": "gulpfile.js",
     "dependencies": {
         "babel-core": "^6.17.0",
+        "babel-eslint": "^7.2.3",
+        "babel-loader": "^7.1.1",
         "babel-plugin-transform-runtime": "^6.15.0",
+        "babel-preset-env": "^1.5.2",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "babel-runtime": "^6.11.6",
+        "css-loader": "^0.28.4",
         "debug": "^2.6.8",
+        "del": "^3.0.0",
         "diy-loader": "^1.0.1",
         "ejs": "^2.5.6",
+        "eslint": "^4.1.1",
+        "eslint-config-standard": "^10.2.1",
+        "eslint-config-standard-react": "^5.0.0",
+        "eslint-plugin-babel": "^4.1.1",
+        "eslint-plugin-import": "^2.6.0",
+        "eslint-plugin-node": "^5.1.0",
+        "eslint-plugin-promise": "^3.5.0",
+        "eslint-plugin-react": "^7.1.0",
+        "eslint-plugin-standard": "^3.0.1",
         "express": "^4.15.3",
-        "gulp-less": "^3.3.0",
+        "gulp": "github:gulpjs/gulp#4.0",
+        "gulp-changed": "^3.1.0",
+        "gulp-eslint": "^4.0.0",
+        "gulp-express": "^0.3.5",
+        "gulp-remember": "^0.3.1",
+        "gulp-rename": "^1.2.2",
+        "gulp-util": "^3.0.8",
+        "html-webpack-plugin": "^2.29.0",
         "n-zepto": "^1.2.0",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
-        "react-router": "^4.1.1"
-    },
-    "devDependencies": {
-        "babel-eslint": "^7.1.0",
-        "babel-loader": "^6.4.1",
-        "babel-plugin-istanbul": "^3.0.0",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-env": "^1.5.2",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "browser-sync": "^2.18.12",
-        "connect-rest": "^1.9.5",
-        "css-loader": "^0.28.4",
-        "del": "^3.0.0",
-        "ejs-loader": "^0.3.0",
-        "eslint": "^3.0.1",
-        "eslint-config-standard": "^6.0.0",
-        "eslint-config-standard-react": "^4.0.0",
-        "eslint-plugin-babel": "^4.0.0",
-        "eslint-plugin-promise": "^3.0.0",
-        "eslint-plugin-react": "^6.0.0",
-        "eslint-plugin-standard": "^2.0.0",
-        "gulp": "github:gulpjs/gulp#4.0",
-        "gulp-babel": "^6.1.2",
-        "gulp-changed": "^3.1.0",
-        "gulp-clean-css": "^3.4.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-connect": "^5.0.0",
-        "gulp-ejs": "^3.0.1",
-        "gulp-eslint": "^3.0.1",
-        "gulp-express": "^0.3.5",
-        "gulp-file-include": "^1.1.0",
-        "gulp-less": "^3.3.0",
-        "gulp-react": "^3.1.0",
-        "gulp-remember": "^0.3.1",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace": "^0.5.4",
-        "gulp-uglify": "^3.0.0",
-        "gulp-util": "^3.0.8",
-        "gulp-webpack": "^1.5.0",
-        "html-webpack-plugin": "^2.28.0",
-        "jshint": "^2.9.4",
-        "postcss-loader": "^2.0.6",
-        "postcss-modules-values": "^1.3.0",
-        "react-hot-loader": "^3.0.0-beta.6",
+        "react-hot-loader": "^1.3.1",
         "react-redux": "^5.0.5",
+        "react-router": "^4.1.1",
         "react-router-dom": "^4.1.1",
-        "redux": "^3.7.0",
-        "redux-thunk": "^2.2.0",
         "style-loader": "^0.18.2",
-        "webpack": "^2.6.1",
+        "webpack": "^3.0.0",
         "webpack-browser-log": "^0.1.0",
-        "webpack-dev-middleware": "^1.10.2",
-        "webpack-dev-server": "^2.4.5",
+        "webpack-dev-middleware": "^1.11.0",
+        "webpack-dev-server": "^2.5.0",
         "webpack-hot-middleware": "^2.18.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "mod": "node ./src/devTool/cmd/makeMod.js"
     },
     "author": "",
