--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "babel-loader": "^7.1.1",
         "babel-plugin-transform-runtime": "^6.15.0",
         "babel-preset-env": "^1.5.2",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babel-runtime": "^6.11.6",
@@ -38,10 +39,11 @@
         "n-zepto": "^1.2.0",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
-        "react-hot-loader": "^1.3.1",
+        "react-hot-loader": "^3.0.0-beta.6",
         "react-redux": "^5.0.5",
         "react-router": "^4.1.1",
         "react-router-dom": "^4.1.1",
+        "redux": "^3.7.1",
         "style-loader": "^0.18.2",
         "webpack": "^3.0.0",
         "webpack-browser-log": "^0.1.0",
