--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "eslint-plugin-react": "^7.1.0",
         "eslint-plugin-standard": "^3.0.1",
         "express": "^4.15.3",
+        "extract-text-webpack-plugin": "^2.1.2",
         "gulp": "github:gulpjs/gulp#4.0",
         "gulp-changed": "^3.1.0",
         "gulp-eslint": "^4.0.0",
@@ -36,6 +37,8 @@
         "gulp-rename": "^1.2.2",
         "gulp-util": "^3.0.8",
         "html-webpack-plugin": "^2.29.0",
+        "less": "^2.7.2",
+        "less-loader": "^4.0.4",
         "n-zepto": "^1.2.0",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
